Sets up recurring accrual payment transfers when the user creates or edits an investmentAccount or debtAccount. Unit tests for this are now implemented. Additionally recurring transfers with no endDate are now valid and will be treated as occuring indefintely. Thi means they will now recur until the timelineEndDate is reached, and will not contribute to determining what this modelParameter value is.

--- a/TODO.txt
+++ b/TODO.txt
@@ -23,4 +23,6 @@
 // 8.)  Check about recurring transfers for investments and Debts.
 //
 // 9.)  How to deal with hard user end date that is before a recurring transfer end date.
+//
+// 10.) Ensure that recurring transfers with no endDate are treated as recurring indefinitely until timelineEndDate is reached.
 // // //
